--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,16 @@
   "description": "Frontend for MLBattle - Machine Learning Competition Platform",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "maath": "^0.10.8",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "three": "^0.181.0"
   },
   "scripts": {
     "start": "react-scripts start",
